log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outputlogger
  template:
    metadata:
      labels:
        app: outputlogger
    spec:
      containers:
        - name: output-writer
          image: fajouianas/devops-with-kubernetes:2.01-writer
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
        - name: output-reader
          image: fajouianas/devops-with-kubernetes:2.05-reader
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
            - name: log-output-config
              mountPath: /config
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: log-output-config
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
