log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: outputlogger
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
