log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: log-output-route
spec:
  parentRefs:
    - name: log-output-ping-pong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          port: 80
